<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.charTemplatePrimary">


    <TextView
        android:id="@+id/levelLabel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="10dp"
        android:text="@string/lvlhint"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toStartOf="@+id/levelTxtEdit"
        app:layout_constraintTop_toBottomOf="@+id/nameTxtEdit" />

    <EditText
        android:id="@+id/nameTxtEdit"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="34dp"
        android:hint="@string/nameHint"
        app:layout_constraintStart_toEndOf="@+id/charImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/charImage"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="35dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/archetypeTxtEdit"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="31dp"
        android:hint="@string/classHint"
        app:layout_constraintStart_toEndOf="@+id/charImage"
        app:layout_constraintTop_toBottomOf="@+id/nameTxtEdit" />

    <EditText
        android:id="@+id/levelTxtEdit"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="49dp"
        android:hint="@string/_lvlHint"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxtEdit" />

    <TextView
        android:id="@+id/psLabel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="197dp"
        android:layout_marginTop="45dp"
        android:text="@string/ps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/archetypeTxtEdit" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psTxtEdit">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
           >

            <TextView
                android:id="@+id/evaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:padding="8dip"
                android:text="@string/eva" />

            <TextView
                android:id="@+id/impLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:padding="8dip"
                android:text="@string/imp" />

            <TextView
                android:id="@+id/punLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:padding="8dip"
                android:text="@string/pun" />

            <TextView
                android:id="@+id/magLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:padding="8dip"
                android:text="@string/mag" />

            <TextView
                android:id="@+id/fzaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:padding="8dip"
                android:text="@string/fza" />

            <TextView
                android:id="@+id/aglLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:padding="8dip"
                android:text="@string/agl" />

            <TextView
                android:id="@+id/perLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:padding="8dip"
                android:text="@string/per" />

            <TextView
                android:id="@+id/carLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:padding="8dip"
                android:text="@string/car" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/evaTxtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="number"
                android:maxLength="1"
                android:padding="8dip"
                android:textAlignment="center"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/impTxtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="number"
                android:maxLength="1"
                android:padding="8dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/punTxtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="number"
                android:maxLength="1"
                android:padding="8dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/magTxtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="number"
                android:maxLength="1"
                android:padding="8dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/fzaTxtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="number"
                android:maxLength="1"
                android:padding="8dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/aglTxtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="number"
                android:maxLength="1"
                android:padding="8dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/perTxtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="number"
                android:maxLength="1"
                android:padding="8dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/carTxtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="number"
                android:maxLength="1"
                android:padding="8dip"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/psTxtEdit"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/_psHint"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toEndOf="@+id/psLabel"
        app:layout_constraintTop_toBottomOf="@+id/archetypeTxtEdit" />

    <EditText
        android:id="@+id/descriptionTxtEdit"
        android:layout_width="343dp"
        android:layout_height="115dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="11dp"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTxtEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/imageEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="new image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charImage" />

</androidx.constraintlayout.widget.ConstraintLayout>